Dummy_Package_for_scratch_org/main/default/objects/Quality_Gate__c/fields/Automation_Template__c.field-meta.xml
<CustomField>
    <fullName>Automation_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Group of steps to be executed in the future.</inlineHelpText>
    <label>Automation Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Deployment__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Automation_Template</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipLabel>Automations</relationshipLabel>
    <relationshipName>Automations</relationshipName>
    <type>Lookup</type>
</CustomField>