Dummy_Package_for_scratch_org/main/default/objects/Quality_Gate__c/fields/Compliance_Rule_Group__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Rule_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If &apos;Compliance Check&apos; is selected as the type, what Compliance Rule Group should be run?</description>
    <inlineHelpText>If &apos;Compliance Check&apos; is selected as the type, what Compliance Rule Group should be run?</inlineHelpText>
    <label>Compliance Rule Group</label>
    <referenceTo>Compliance_Rule_Group__c</referenceTo>
    <relationshipName>Quality_Gates</relationshipName>
    <type>Lookup</type>
</CustomField>