Dummy_Package_for_scratch_org/main/default/objects/Quality_Gate__c/fields/Connection_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Connection_Behavior__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>What Connection Behavior is this Quality Gate attached to?</description>
    <inlineHelpText>What Connection Behavior is this Quality Gate attached to?</inlineHelpText>
    <label>Parent Connection Behavior</label>
    <referenceTo>Connection_Behavior__c</referenceTo>
    <relationshipName>Quality_Gates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>