Dummy_Package_for_scratch_org/main/default/objects/Quality_Gate__c/fields/DataJSON__c.field-meta.xml
<CustomField>
    <fullName>DataJSON__c</fullName>
    <description>If &apos;URL Callout&apos; is selected as the type, this stores the details of that callout.</description>
    <inlineHelpText>If &apos;URL Callout&apos; is selected as the type, this stores the details of that callout.</inlineHelpText>
    <label>DataJSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>