Dummy_Package_for_scratch_org/main/default/objects/Quality_Gate__c/fields/Execution_Event__c.field-meta.xml
<CustomField>
    <fullName>Execution_Event__c</fullName>
    <inlineHelpText>The event that triggers this automation.</inlineHelpText>
    <label>Execution Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deployment</fullName>
                <default>true</default>
                <label>Deployment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>