Dummy_Package_for_scratch_org/main/default/objects/Quality_Gate__c/fields/Manual_Task_Owner__c.field-meta.xml
<CustomField>
    <fullName>Manual_Task_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If &apos;Manual Approval&apos;, &apos;Manual Test&apos;, or &apos;Pull Request&apos; is selected as the type, who should this task be assigned to?</description>
    <inlineHelpText>If &apos;Manual Approval&apos;, &apos;Manual Test&apos;, or &apos;Pull Request&apos; is selected as the type, who should this task be assigned to?</inlineHelpText>
    <label>Manual Task Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quality_Gates</relationshipName>
    <type>Lookup</type>
</CustomField>