Dummy_Package_for_scratch_org/main/default/objects/Quality_Gate__c/fields/Metadata_Group__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What metadata will trigger this Quality Gate to run? Quality Gates will only run on deployments where the metadata matches that the metadata in this group</description>
    <inlineHelpText>Automations and Quality Gates will be executed when the metadata deployed or committed matches the one specified here.</inlineHelpText>
    <label>Metadata Group</label>
    <referenceTo>Metadata_Group__c</referenceTo>
    <relationshipLabel>Automations</relationshipLabel>
    <relationshipName>Quality_Gates</relationshipName>
    <type>Lookup</type>
</CustomField>