Dummy_Package_for_scratch_org/main/default/objects/Quality_Gate__c/fields/Score_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Score_Threshold__c</fullName>
    <description>If &apos;Static Code Analysis&apos; is selected as the type, what static analysis score should be considered passing?</description>
    <inlineHelpText>If &apos;Static Code Analysis&apos; is selected as the type, what static analysis score should be considered passing?</inlineHelpText>
    <label>Static Analysis Score Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>