Dummy_Package_for_scratch_org/main/default/objects/Quality_Gate__c/fields/Selenium_Test_Group__c.field-meta.xml
<CustomField>
    <fullName>Selenium_Test_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If &apos;Selenium Test&apos; is selected as the type, what Selenium Test Group should be run?</description>
    <inlineHelpText>If &apos;Selenium Test&apos; is selected as the type, what Selenium Test Group should be run?</inlineHelpText>
    <label>Selenium Test Group</label>
    <referenceTo>Selenium_Test_Group__c</referenceTo>
    <relationshipName>Quality_Gates</relationshipName>
    <type>Lookup</type>
</CustomField>