Dummy_Package_for_scratch_org/main/default/objects/Quality_Gate__c/fields/Static_Code_Analysis_Settings__c.field-meta.xml
<CustomField>
    <fullName>Static_Code_Analysis_Settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If &apos;Static Code Analysis&apos; is selected as the type, which static analysis settings should be used?</description>
    <inlineHelpText>If &apos;Static Code Analysis&apos; is selected as the type, which static analysis settings should be used?</inlineHelpText>
    <label>Static Code Analysis Settings</label>
    <referenceTo>Static_Code_Analysis_Settings__c</referenceTo>
    <relationshipName>Quality_Gates</relationshipName>
    <type>Lookup</type>
</CustomField>