Dummy_Package_for_scratch_org/main/default/objects/Quality_Gate__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test</label>
    <referenceTo>Test__c</referenceTo>
    <relationshipLabel>Automations</relationshipLabel>
    <relationshipName>Automations</relationshipName>
    <type>Lookup</type>
</CustomField>