Dummy_Package_for_scratch_org/main/default/objects/Quality_Gate__c/fields/Test_Level__c.field-meta.xml
<CustomField>
    <fullName>Test_Level__c</fullName>
    <description>If &apos;Apex Test with Validation&apos; is selected as the type, what test level should be performed. &apos;Run Specified Tests&apos; will run whatever tests are included on the user stories being deployed</description>
    <inlineHelpText>If &apos;Apex Test with Validation&apos; is selected as the type, what test level should be performed. &apos;Run Specified Tests&apos; will run whatever tests are included on the user stories being deployed</inlineHelpText>
    <label>Apex Test Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Test_Level</valueSetName>
    </valueSet>
</CustomField>