Dummy_Package_for_scratch_org/main/default/objects/Quality_Gate__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>What type of verification will be performed for this quality gate</description>
    <inlineHelpText>What type of verification will be performed for this quality gate</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Quality_Gate_Types</valueSetName>
    </valueSet>
</CustomField>